feat(user): add user handler and http server
